# Angler

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/catches/: index.tsx
src/app/map/: index.tsx
src/app/resources/: index.tsx
src/app/resources/knots/: index.tsx
src/app/resources/knots/[knot]/: index.tsx
src/app/resources/rigs/: index.tsx
src/app/resources/rigs/[rig]/: index.tsx
src/app/resources/species/: index.tsx
src/app/resources/species/[species]/: index.tsx
src/app/statistics/: index.tsx
src/components/Navigation/: NavigationButton.tsx  index.tsx
src/components/Page/: index.tsx
src/components/PageReturnable/: index.tsx
src/components/Resources/: index.tsx
src/const/: index.ts
src/types/: index.ts
