[package]
name = "angler"
version = "0.1.0"
description = "angler"
authors = ["Bamboooz"]
edition = "2021"

[lib]
name = "angler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
