[package]
name = "angler"
version = "0.1.0"
description = "angler"
authors = ["Bamboooz"]
edition = "2021"

[lib]
name = "angler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
